# OpenCL

./: CMakeLists.txt  OpenCLTemplate.cpp  OpenCLTemplate.hpp  main.cpp  mnt.cl  readme.md
